communication with server and alert for when points run out

--- a/Client/ClickerGame/app/src/main/res/values/strings.xml
+++ b/Client/ClickerGame/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="press">Press</string>
     <string name="points">Current Points</string>
     <string name="pointsTo">Clicks to next reward</string>
+    <string name="game_over">Game Over</string>
+    <string name="no_more_points">You have run our of points. Resetting to 20 points!</string>
 </resources>
